# ethz_asl_UAV_autonomous

./: README.md  test.md
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin  _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/.private/lightweight_filtering/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/.private/rovio/: .catkin  .rosinstall  setup.sh
devel/include/rovio/: SrvResetToPose.h  SrvResetToPoseRequest.h  SrvResetToPoseResponse.h
devel/lib/pkgconfig/: catkin_tools_prebuild.pc  lightweight_filtering.pc  rovio.pc
devel/lib/rovio/: feature_tracker_node  rovio_node  rovio_rosbag_loader
devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
devel/share/lightweight_filtering/cmake/: lightweight_filteringConfig-version.cmake  lightweight_filteringConfig.cmake
devel/share/rovio/cmake/: rovio-msg-extras.cmake  rovio-msg-paths.cmake  rovioConfig-version.cmake  rovioConfig.cmake
logs/kindr/: build.cmake.001.log.stderr  build.cmake.002.log.stderr
logs/rovio/: build.cmake.000.log.stderr  build.make.000.log.stderr  build.make.001.log.stderr  build.make.002.log.stderr  build.make.003.log.stderr  build.symlink.000.log.stderr
src/config/: mav_voxblox_local_planning.rviz  mav_voxblox_planning.rviz  mva_voxblox_local_planning.rviz
src/dependents/: readme.md
src/dependents/ceres_catkin/: CMakeLists.txt  package.xml
src/dependents/nlopt/: CMakeLists.txt  README.md  make_install_nlopt.sh.in  package.xml
src/mav_voxblox_planning/install/: install_https.rosinstall  other.md
src/mav_voxblox_planning/mav_local_planner/launch/: firefly_sim.launch
src/mav_voxblox_planning/mav_local_planner/worlds/: empty.world
src/mav_voxblox_planning/voxblox_rrt_planner/launch/: rrt_saved_map.launch
src/rovio/cfg/: rovio.rviz
src/rovio/launch/: rovio_rosbag_node.launch
src/rovio/lightweight_filtering/: CMakeLists.txt
src/rovio/src/: Camera.cpp  rovio_node.cpp  rovio_rosbag_loader.cpp
src/voxblox/voxblox_ros/: CMakeLists.txt
(+44 files in other folders)
